<resources>
    <string name="app_name">AndroidApp</string>
    <string name="history">History</string>
    <string name="settings">Settings</string>
    <string name="home">Home</string>
    <string name="placeholder">Placeholder</string>
    <string name="header">Header</string>
    <string name="homebutton_icon">Homebutton icon</string>
    <string name="setting_button_icon">Setting button icon</string>
    <string name="history_button_icon">History button icon</string>
    <string name="placeholder_icon">Placeholder icon</string>
    <string name="alarm_status">Alarm Status</string>
    <string name="edit_pattern">Change joystick pattern</string>
    <string name="userImage_desc">Profile picture of user</string>
    <string name="user_name">John doe</string>
    <string name="edit_profile">edit profile</string>
    <string name="pattern_icon">Pattern icon</string>
    <string name="phone_icon">Phone icon</string>
    <string name="left_arrow">return to previous page</string>
    <string name="AlarmOff">AlarmOff</string>
    <string name="notification_icon">Edit notifications</string>
    <string name="dropdown_alt">dropDownMenuAlternatives</string>
    <string name="editPhoneNrText">Enter emergency contact phone number</string>



    <string name="choose_pattern">Choose a pattern</string>
    <string name="save_pattern">Save pattern</string>
    <string name="create_account">Create Account</string>
    <string name="sign_in">Sign in</string>

</resources>