<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:id="@+id/settings_activity"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              tools:context=".Settings.SettingsActivity"
              android:orientation="vertical"
              android:background="@drawable/bluegradient">


    <RelativeLayout android:layout_width="match_parent"
                    android:layout_height="62dp">
        <ImageView android:layout_width="50sp" android:layout_height="50dp"
                   android:src="@drawable/back_arrow"
                   android:padding="14dp"
                   android:layout_marginStart="2dp"
                   android:contentDescription="@string/left_arrow"
                   android:id="@+id/back_button_setPatternscreen"/>


        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:text="@string/choose_pattern"

                  android:textSize="20sp"
                  android:textColor="@color/white"
                  android:layout_alignParentTop="true"

                  android:id="@+id/editPattern_title" android:layout_marginTop="13dp"
                  android:layout_centerInParent="true"/>

        <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@android:color/darker_gray"
                android:layout_alignParentBottom="true"/>


    </RelativeLayout>

    <LinearLayout android:layout_width="match_parent" android:layout_height="422dp">

        <com.andrognito.patternlockview.PatternLockView
                android:id="@+id/pattern_lock_view"
                android:layout_width="match_parent"
                android:layout_gravity="center"
                app:dotNormalSize="12dp"

                app:correctStateColor="@color/green"
                app:wrongStateColor="@color/pomegranate"
                app:pathWidth="4dp"

                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="20dp"
                android:layout_height="291dp"/>


    </LinearLayout>




        <Button
                android:layout_width="222dp"
                android:text="@string/save_pattern"
                android:id="@+id/submitButton"
                android:layout_gravity="center"
                android:layout_height="61dp">

        </Button>



</LinearLayout>





