...
    <RelativeLayout android:layout_width="match_parent" android:layout_height="62dp">
        <ImageView android:layout_width="50sp" android:layout_height="50dp"
            android:src="@drawable/back_arrow"
            android:padding="14dp"
            android:layout_marginStart="2dp"
            android:contentDescription="@string/left_arrow"
            android:id="@+id/back_button"/>


        <TextView
            android:id="@+id/settings_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...
                android:textColor="@color/white"
                android:textSize="26sp"
                android:textStyle="bold" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/edit_profile_button"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:background="@drawable/rounded_corners_ui"
                android:backgroundTint="#3b5998"
...
